--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>COLOR CHANGER</h1>
             </div>
             <div class="full">
-                <button onclick="violet()">VIOLET</button>
+                <button onclick="violet()">Violet</button>
                 <button onclick="indigo()">INDIGO</button>
                 <button onclick="blue()">BLUE</button>
                 <button onclick="green()">GREEN</button>
